testsuite/tests/showIface/should_fail/all.T
test('THPutDocExternal',
     normal,
     multimod_compile_fail,
     ['THPutDocExternal', '-no-hs-main -c -v0'])
